# ceva

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
example/: spline.csv
include/basalt/spline/: posesplinex.h
include/factor/: PoseAnalyticFactor.h  PoseAnalyticFactorX.h
scripts/: deskew_demo.ipynb  fitspline_demo.ipynb  load_query_demo.ipynb
src/: ceva.cpp
