<?xml version="1.0"?>

<package format="2">

    <name>ceva</name>
    <version>0.0.1</version>
    <description>The ceva package</description>

    <maintainer email="thienminh.npn@ieee.org">amiller</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>